// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-steps"
  >
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-0"
      role="button"
      tabindex="0"
    >
      1
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-1"
      role="button"
      tabindex="0"
    >
      2
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-2"
      role="button"
      tabindex="0"
    >
      3
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-3"
      role="button"
      tabindex="0"
    >
      4
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-4"
      role="button"
      tabindex="0"
    >
      5
    </div>
  </div>
</DocumentFragment>
`;

exports[`Steps > should match a snapshot when selectedStep is different 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-steps"
  >
    <div
      class="el-is-used el-step"
      data-testid="step-0"
      role="button"
      tabindex="0"
    >
      1
    </div>
    <div
      class="el-is-active el-step"
      data-testid="step-1"
      role="button"
      tabindex="0"
    >
      2
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-2"
      role="button"
      tabindex="0"
    >
      3
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-3"
      role="button"
      tabindex="0"
    >
      4
    </div>
    <div
      class="mocked-styled-1 el-step"
      data-testid="step-4"
      role="button"
      tabindex="0"
    >
      5
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepsVertical > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-steps-vertical"
  >
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="mocked-styled-1 el-step"
          data-testid="step-0"
          role="button"
          tabindex="0"
        >
          1
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="mocked-styled-1 el-step"
          data-testid="step-1"
          role="button"
          tabindex="0"
        >
          2
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="mocked-styled-1 el-step"
          data-testid="step-2"
          role="button"
          tabindex="0"
        >
          3
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="mocked-styled-1 el-step"
          data-testid="step-3"
          role="button"
          tabindex="0"
        >
          4
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="el-is-active el-step"
          data-testid="step-4"
          role="button"
          tabindex="0"
        >
          5
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepsVertical > should match a snapshot when selectedStep is different 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-steps-vertical"
  >
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="mocked-styled-1 el-step"
          data-testid="step-0"
          role="button"
          tabindex="0"
        >
          1
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
    <div
      class="mocked-styled-3 el-step-vertical"
    >
      <div
        class="mocked-styled-4 el-step-vertical-item"
      >
        <div
          class="el-is-active el-step"
          data-testid="step-1"
          role="button"
          tabindex="0"
        >
          2
        </div>
      </div>
      <div
        class="mocked-styled-5 el-step-vertical-content"
      >
        Lorem, ipsum dolor
      </div>
    </div>
  </div>
</DocumentFragment>
`;
